cambios de presentación

--- a/Coefficients binomiaux.tex
+++ b/Coefficients binomiaux.tex
@@ -77,7 +77,8 @@
 \end{prop}
 
 \begin{prop} Sommes doubles
-	\[\underset{i,j\in \Omega}{\sum} a_{ij} = \underset{i \in E}{\sum}\left(\underset{j \in F}{\sum}a_{ij}\right)\]
+	\[\underset{i,j\in \Omega}{\sum} a_{ij} = \underset{i \in E}{\sum}\left(\underset{j \in F}{\sum}a_{ij}\right) = 
+	\underset{j \in F}{\sum}\left(\underset{i \in E}{\sum}a_{ij}\right)\]
 \end{prop}
 
 \begin{prop} Sommes triangulaires
