--- a/Développements limités.tex
+++ b/Développements limités.tex
@@ -98,6 +98,9 @@
 		+ o(x^n)$
 	\item $\frac{1}{1-x} = 1 + x + \hdots + x^n + o(x^n)$
 	\item $\frac{1}{1+x} = 1 - x + x^2 + \hdots + (-1)^n x^n + o(x^n)$
+	\item $\tan x = x + \frac{x^3}{3} + \frac{2x^5}{15} + o(x^5)$
+	\item $\arcsin x = x + \frac{x^3}{6} + \frac{3x^5}{40} + o(x^5)$
+	\item $\arctan x = x - \frac{x^3}{3} + \frac{x^5}{5} + o(x^5)$
 \end{itemize}
 
 
