--- a/Nombres complexes.tex
+++ b/Nombres complexes.tex
@@ -73,4 +73,27 @@
 	$z_1, z_2 \in \mathbb{C},\ \big||z_1| - |z_2|\big| \leq |z_1 \bfrac{+}{-} z_2| \leq |z_1| + |z_2|$
 \end{prop}
 
+\subsection{Argument d'un complexe non nul}
+\begin{defi}
+	Soit $z \in \mathbb{C}^*$. On appelle argument de $z$ et on note $\arg(z)$ l'ensemble des r\'eels $\theta$ tels que:
+	\[z = |z|(\cos \theta + i \sin \theta)\]
+	\begin{rqs}
+		Si on conna\^it un argument de $z$ on les conna\^it tous (modulo $2\pi$)
+	\end{rqs}
+\end{defi}
+
+\subsection{La notation $e^{i \theta}$}
+\begin{defi}
+	Pour tout r\'eel $\theta$, on note $e^{i\theta}$ le complexe $\cos \theta + i \sin \theta$\\
+	On \'ecrit alors: $z = re^{i\theta}$ avec $r \in \mathbb{R},\ \theta \in \mathbb{R}$. C'est une \'ecriture tr\`es bien adapt\'ee aux produits
+	et aux quotients
+	\begin{rqs}
+		$\overline{e^{i\theta}} = \cos \theta - i \sin \theta$
+	\end{rqs}
+\end{defi}
+\begin{prop} $ $ \\
+	$\arg (zz') = \arg z + \arg z'$\\
+	$\arg \frac{z}{z'}  = \arg z  - \arg z'$
+\end{prop}
+
 \end{document}
