--- a/Nombres réels.tex
+++ b/Nombres réels.tex
@@ -5,7 +5,7 @@
 \usepackage{verbatim}
 \usepackage{booktabs}
 
-\title{Entiers naturels}
+\title{Nombres r\'eels}
 \date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
@@ -20,15 +20,15 @@
 \section{Valeur absolue}
 \begin{prop} $x,a \in \mathbb{R}$
 	\begin{itemize}
-		\item $|x| \leq a \Leftrightarrow (x \leq a$ et $-x \leq a)$
-		\item $|xy| = |x||y|$
+		\item [-] $|x| \leq a \Leftrightarrow (x \leq a$ et $-x \leq a)$
+		\item [-] $|xy| = |x||y|$
 	\end{itemize}
 \end{prop}
 \begin{prop} In\'egalit\'es triangulaires:
 	\begin{itemize}
-		\item $|x+y| \leq |x| + |y|$
-		\item $|x+y| \geq \big||x| - |y|\big|$
-		\item $|x-y| \geq \big||x| - |y|\big|$
+		\item [-] $|x+y| \leq |x| + |y|$
+		\item [-] $|x+y| \geq \big||x| - |y|\big|$
+		\item [-] $|x-y| \geq \big||x| - |y|\big|$
 	\end{itemize}
 \end{prop}
 
@@ -55,10 +55,9 @@
 \end{prop}
 \begin{defi} Partie enti\`ere
 	\begin{itemize}
-		\item Soit $x \in \mathbb{R}$ alors, \\
-			Il existe un unique $n \in \mathbb{Z}, n \leq x < n+1$ \\
+		\item [-] Soit $x \in \mathbb{R}$ alors, il existe un unique $n \in \mathbb{Z}, n \leq x < n+1$ \\
 			$n$ s'appelle la partie enti\`ere de $x$ et se note $E(x)$
-		\item Frac$(x) = x - E(x)$
+		\item [-] Frac$(x) = x - E(x)$
 	\end{itemize}
 \end{defi}
 \begin{defi} Densit\'e \\
