--- a/Équivalents.tex
+++ b/Équivalents.tex
@@ -18,23 +18,23 @@
 \maketitle
 
 \section{D\'efinitions}
-Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a $D$, $f,g: D \rightarrow \mathbb{R}$
+Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a $D$, $f,g: D \rightarrow \mathbb{R}$. Au voisinage de A:
 \begin{enumerate}
-	\item f n\'egligeable devant g au voisinage de a: \\
+	\item f n\'egligeable devant g: \\
 		$\exists\ U \in V_{\overline{\mathbb{R}}}(a), \epsilon: U \cap D \rightarrow \mathbb{R}$ tel que
 		$\epsilon(x)\underset{a}{\rightarrow}  0$ et $\forall t \in U \cap D, f(t)=\epsilon(t)g(t)$
-	\item f domin\'ee par g au voisinage de a: \\
+	\item f domin\'ee par g: \\
 		$\exists\ U \in V_{\overline{\mathbb{R}}}(a), \omega: U \cap D \rightarrow \mathbb{R}$ tel que $\omega$ born\'ee et
 		$\forall t \in U \cap D, f(t)=\omega(t)g(t)$
-	\item f \'equivalent \`a g au voisinage de a: \\
-		$\exists\ U \in V_{\overline{\mathbb{R}}}(a), \varphi: U \cap D \rightarrow \mathbb{R}$ tel que $\varphi(x)\underset{a}{\rightarrow} 1$
-		et $\forall t \in U \cap D, f(t)=\varphi(t)g(t)$
+	\item f \'equivalent \`a g: \\
+		$\exists\ U \in V_{\overline{\mathbb{R}}}(a), \varphi: U \cap D \rightarrow \mathbb{R}$ tel que
+		$\varphi(x)\underset{a}{\rightarrow} 1$ et $\forall t \in U \cap D, f(t)=\varphi(t)g(t)$
 \end{enumerate}
 
 \begin{rqs} $ $
 	\begin{enumerate}
 		\item Une fonction n'est \'equivalente, domin\'ee ou n\'egligeable par 0 que si elle est nulle sur le voisinage
-		\item $f(x) = \circ(1)$ signifie que $f(x) \rightarrow 0$
+		\item $f(x) = o(1)$ signifie que $f(x) \rightarrow 0$
 		\item Soit $l \in \mathbb{R}^{*}, f(x) \sim l \Leftrightarrow f(x) \rightarrow l$
 	\end{enumerate}
 \end{rqs}
@@ -56,11 +56,11 @@ Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a 
 
 \section{Faits de base}
 \begin{itemize}
-	\item $f_1(x) = \circ (g(x))$\\
-		$f_2(x)	= \circ (g(x))$ \\
-		Alors $\forall \alpha \in \mathbb{R}, \alpha f_1(x) + f_2(x) = \circ (g(x))$
-	\item $f(x) \sim g(x) \Leftrightarrow f(x) - g(x) = \circ (g(x))$
-	\item $f(x) = \circ(g(x)) \Rightarrow f(x) + g(x) \sim g(x)$
+	\item $f_1(x) = o(g(x))$\\
+		$f_2(x)	= o(g(x))$ \\
+		Alors $\forall \alpha \in \mathbb{R}, \alpha f_1(x) + f_2(x) =  o(g(x))$
+	\item $f(x) \sim g(x) \Leftrightarrow f(x) - g(x) = o(g(x))$
+	\item $f(x) = o(g(x)) \Rightarrow f(x) + g(x) \sim g(x)$
 	\item l'\'equivalence est r\'eflexive, sym\'etrique et transitive
 	\item $f_1(x) \sim g_1(x)$\\
 		$f_2(x) \sim g_2(x)$\\
@@ -76,7 +76,7 @@ Soit $D$ une partie de $\mathbb{R}, a \in \overline{\mathbb{R}}$ adh\'erent \`a 
 \end{theo}
 
 \begin{rqs}
-	La composition \`a gauche marche si on \'el\'eve les fonction \`a une puissance $\alpha \in \mathbb{R}$ ou si on compose par $\ln$ avec la
+	La composition \`a gauche marche si on \'el\'eve les fonction \`a une puissance $\alpha \in \mathbb{R}$ ou si on compose par $\ln$ avec une
 	fonction g qui tend vers $0$ ou $+\infty$
 \end{rqs}
 
