--- a/Entiers naturels.tex
+++ b/Entiers naturels.tex
@@ -1,9 +1,20 @@
 \documentclass[fleqn]{article}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{amsthm}
+\usepackage{verbatim}
+\usepackage{booktabs}
 
 \title{Entiers naturels}
 \date{}
+
+\theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
+\theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
+\theoremstyle{definition} \newtheorem*{coro}{Corollaire}
+\theoremstyle{remark} \newtheorem*{rqs}{Remarques}
+\theoremstyle{definition} \newtheorem*{prop}{Propri\'et\'e}
+\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
+\ra{1.3}
 
 \begin{document}
 \maketitle
@@ -17,7 +28,7 @@ Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni de relation d'ordre to
 \end{enumerate}
 
 \section{r\'ecurrence}
-\begin{itemize}
+\begin{enumerate}
 	\item r\'ecurrence simple:
 		\begin{enumerate}
 			\item $P(0)$ est vrai
@@ -33,31 +44,36 @@ Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni de relation d'ordre to
 			\item $P(0)$ est vrai
 			\item $\forall n \in \mathbb{N}, (\forall k \in [\![0,n]\!], P(k)) \Rightarrow P(n+1)$
 		\end{enumerate}
-\end{itemize}
+\end{enumerate}
 
 \section{Propri\'et\'ees}
-\begin{itemize}
-	\item D\'ecomposition en nombres premiers:
-		\begin{itemize}
-			\item Th\'eor\`eme: Soit $n \in \mathbb{N}^*$, alors $n$ s'\'ecrit de fa\c{c}on unique: \\
-				$n = p_i \ldots p_r$ (avec $r \in \mathbb{N}, p_i$ premier $(1 \leq i \leq r)$)
-			\item Corollaire: Tout entier $n \in \mathbb{N}^*$ s'\'ecrit de fa\c{c}on unique: \\
-				$n = p_1^{\alpha_1} \ldots p_r^{\alpha_r}$ (avec $r \in \mathbb{N}$,
-				$p_1 \ldots p_r$ premier distincts, $\alpha_1 \ldots \alpha_r \in {N}^*$)
-		\end{itemize}
-	\item Valuation p-adique:
-		\begin{itemize}
-			\item D\'efinition: pour $n \in \mathbb{N}^*$ on pose $V_p(n)$ \\
-				\[n = \prod_{p \in \mathcal{P}} p^{V_p(n)}\]
-			\item $V_p(nm) = V_p(n) + V_p(m)$ \\
-				$n|m \Leftrightarrow \forall p \in \mathcal{P}, V_p(n) \leq V_p(m)$
-		\end{itemize}
-	\item Division euclidienne dans $\mathbb{N}$ \\
-		Soit $a \in \mathbb{N}, b \in \mathbb{N}^*$, il existe un unique couple $(a,b) \in \mathbb{N}^2$ tel que:
-		\begin{enumerate}
-			\item $a = bq + r$
-			\item $r < b$
-		\end{enumerate}
-\end{itemize}
+\begin{theo} D\'ecomposition en nombres premiers \\
+		Soit $n \in \mathbb{N}^*$, alors $n$ s'\'ecrit de fa\c{c}on unique:
+		\[n = p_i \ldots p_r\] (avec $r \in \mathbb{N}, p_i$ premier $(1 \leq i \leq r)$)
+\end{theo}
+\begin{coro}
+	Tout entier $n \in \mathbb{N}^*$ s'\'ecrit de fa\c{c}on unique:
+	\[n = p_1^{\alpha_1} \ldots p_r^{\alpha_r}\] (avec $r \in \mathbb{N}$,
+	$p_1 \ldots p_r$ premier distincts, $\alpha_1 \ldots \alpha_r \in {N}^*$)
+\end{coro}
+
+\begin{defi} Valuation p-adique \\
+	Pour $n \in \mathbb{N}^*$ on pose $V_p(n)$ \\
+		\[n = \prod_{p \in \mathcal{P}} p^{V_p(n)}\]
+\end{defi}
+\begin{prop} $ $
+	\begin{itemize}
+		\item [-] $V_p(nm) = V_p(n) + V_p(m)$
+		\item [-] $n|m \Leftrightarrow \forall p \in \mathcal{P}, V_p(n) \leq V_p(m)$
+	\end{itemize}
+\end{prop}
+
+\begin{defi} Division euclidienne dans $\mathbb{N}$ \\
+	Soit $a \in \mathbb{N}, b \in \mathbb{N}^*$, il existe un unique couple $(a,b) \in \mathbb{N}^2$ tel que:
+	\begin{enumerate}
+		\item $a = bq + r$
+		\item $r < b$
+	\end{enumerate}
+\end{defi}
 
 \end{document}
