--- a/Topologie dans R.tex
+++ b/Topologie dans R.tex
@@ -64,17 +64,13 @@ Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $
 
 \begin{prop} $ $
 	\begin{itemize}
-		\item [-] Adh\`erence, int\'erieur d'intervalles:
-			\begin{align*}
-				Int([a,b]) &= Int(]a,b]) \\
-						   &= Int([a,b[) \\
-						   &= Int(]a,b[) = ]a,b[
-			\end{align*}
-			\begin{align*}
-				Adh(]a,b[) &= Adh(]a,b]) \\
-						   &= Adh([a,b[) \\
-						   &= Adh([a,b]) = [a,b]
-			\end{align*} \\
+		\item [-] Adh\`erence, int\'erieur d'intervalles: \\
+		\begin{tabular}{@{}ll@{}}
+				$Int([a,b])$ & $\quad Adh(]a,b[)$ \\
+				$\quad = Int(]a,b])$ & $\quad \quad = Adh(]a,b])$ \\
+				$\quad = Int([a,b[)$ & $\quad \quad = Adh([a,b[)$ \\
+				$\quad = Int(]a,b[) = ]a,b[$ & $\quad \quad = Adh([a,b]) = [a,b]$ \\
+		\end{tabular}
 		\item [-] Soit $A$ une partie major\'ee de $\mathbb{R}$, alors $\sup A$ est adh\'erent \`a $A$ (analogue pour $\inf\ A$)
 		\item [-] Soit $A \subset \mathbb{R}$ \\
 			$A$ est ferm\'e $\Leftrightarrow A = Adh(A)$ \\
