--- a/Intégration.tex
+++ b/Intégration.tex
@@ -21,22 +21,23 @@
 \maketitle
 
 \section{Int\'egrales des fonctions en escalier}
-\begin{defi} Subdivision d'un segment\\
-	Soient $a, b\in \mathbb{R},\ a<b$\\
-	Une subdivision du segment $[a,b]$ est une suite finie $(x_0, \hdots, x_n)$ avec: \\ $a=x_0 < x_1 < \hdots < x_{n-1} <  x_n = b$
-\end{defi}
+\begin{defi} $ $
+\begin{enumerate}
+	\item Subdivision d'un segment \\
+		Soient $a, b\in \mathbb{R},\ a<b$. Une subdivision du segment $[a,b]$ est une suite finie $(x_0, \hdots, x_n)$ avec: $a=x_0 < x_1 < \hdots < x_{n-1} <  x_n = b$
 
-\begin{defi} Fonctions en escalier\\
-	$f: [a,b] \rightarrow \mathbb{R}$ est dite en escalier sur $[a,b]$ s'il existe $\Gamma = (x_0, \hdots, x_n)$ une subdivision de $[a,b]$
-	tel que $f$ est constante sur $]x_k, x_k+1[,\ (0 \leq k \leq n-1)$
+	\item Fonctions en escalier\\
+		$f: [a,b] \rightarrow \mathbb{R}$ est dite en escalier sur $[a,b]$ s'il existe $\Gamma = (x_0, \hdots, x_n)$ une subdivision de $[a,b]$
+		tel que $f$ est constante sur $]x_k, x_{k+1}[\ (0 \leq k \leq n-1)$
+\end{enumerate}
 \end{defi}
 
 \begin{theo} Int\'egrale des fonctions en escalier
 	\begin{itemize}
-	\item Soit $f \in \mathcal{E}([a,b], \mathbb{R})$. Soit $\Gamma = (x_0, \hdots, x_n)$ une subdivision de $[a,b]$ adapt\'ee \`a $f$ et
+	\item [-] Soit $f \in \mathcal{E}([a,b], \mathbb{R})$. Soit $\Gamma = (x_0, \hdots, x_n)$ une subdivision de $[a,b]$ adapt\'ee \`a $f$ et
 		notons $\lambda_i$ la valeur de $f$ sur $]x_i, x_{i+1}[$ \\
 		Le nombre $\sum_{i = 0}^{n-1} \lambda_i (x_{i+1} - x_i)$ ne d\'epend pas de $\Gamma$.
-	\item On l'appelle int\'egrale de $f$ et on le note $I(f)$
+	\item [-] On l'appelle int\'egrale de $f$ et on le note $I(f)$
 	\end{itemize}
 \end{theo}
 
@@ -46,12 +47,10 @@
 			Soient $f,g \in \mathcal{E}([a,b], \mathbb{R}),\ \alpha \in \mathbb{R}$ alors: $I(\alpha f + g) = \alpha I(f) + I(g)$
 		\item Positivit\'e: \\
 			Soit $f \in \mathcal{E}([a,b], \mathbb{R})$ telle que $\forall x \in [a,b],\ f(x) \geq 0$ alors: $I(f) \geq 0$
-			\begin{coro} $ $
-				\begin{enumerate}
-					\item $f,g \in \mathcal{E}([a,b], \mathbb{R})$ tel que $f \leq g$ alors $I(f) \leq I(g)$
-					\item Soit $f \in \mathcal{E}([a,b], \mathbb{R})$ alors $|I(f)| \leq I(|f|)$
-				\end{enumerate}
-			\end{coro}
+			\begin{enumerate}
+				\item $f,g \in \mathcal{E}([a,b], \mathbb{R})$ tel que $f \leq g$ alors $I(f) \leq I(g)$
+				\item Soit $f \in \mathcal{E}([a,b], \mathbb{R})$ alors $|I(f)| \leq I(|f|)$
+			\end{enumerate}
 		\item Chasles: \\
 			Soit $f \in \mathcal{E}([a,b], \mathbb{R})$ et $c \in ]a,b[$ alors $I(f) = I(f_{|[a,c]}) + I(f_{|[c,b]})$
 	\end{enumerate}
@@ -66,13 +65,13 @@
 
 \begin{theo} Int\'egrale d'une fonction continue sur un segment
 	\begin{itemize}
-		\item Soit $a,b \in \mathbb{R},\ a<b$ et $f:[a,b] \rightarrow \mathbb{R}$, continue. On note $\mathcal{E}_f^+$ l'ensemble des
+		\item [-] Soit $a,b \in \mathbb{R},\ a<b$ et $f:[a,b] \rightarrow \mathbb{R}$, continue. On note $\mathcal{E}_f^+$ l'ensemble des
 		fonction $\psi$
 			en escalier tels que $\psi \geq f$ (resp. $\mathcal{E}_f^-,\ \varphi$) \\
 			$\Omega_+ = \{I(\psi) / \psi \in \mathcal{E}_f^+\} \subset \mathbb{R}$ \\
 			$\Omega_- = \{I(\varphi) / \varphi \in \mathcal{E}_f^-\} \subset \mathbb{R}$ \\
 			Alors $\Omega_+$ est minor\'ee, $\Omega_+$ est major\'ee et $\inf \Omega_+ = \sup \Omega_-$
-		\item Ce nombre est par d\'efinition l'int\'egrale de $f$ et se note $\int_a^b f$. On a donc\\
+		\item [-] Ce nombre est par d\'efinition l'int\'egrale de $f$ et se note $\int_a^b f$. On a donc\\
 			$\forall \varphi \in \mathcal{E}_f^-,\ I(\varphi) \leq \int_a^b f$\\
 			$\forall \psi \in \mathcal{E}_f^+,\ I(\psi) \geq \int_a^b f$
 	\end{itemize}
@@ -94,24 +93,28 @@
 	\end{enumerate}
 \end{theo}
 
-\begin{theo} Int\'egration par parties \\
-	Soient $f,g: [a,b] \rightarrow \mathbb{R}$ de classe $C^1$. Alors
-	\[\int_a^b f'g = [f(t)g(t)]_a^b - \int_a^b fg'\]
-\end{theo}
-
-\begin{prop} Formule de Stirling
-	\[n! \sim (\frac{n}{e})^n \sqrt{2\pi n}\]
-\end{prop}
-
 \begin{theo} Taylor avec reste int\'egral \\
 	Soient $a,b \in \mathbb{R},\ n \in \mathbb{N}$. $f:[a,b] \rightarrow \mathbb{R}$ de classe $C^{n+1}$ alors:
 	\[f(b) = T_{n,f,a}(b) + \int_a^b \frac{(b-t)^n}{n!} f^{(n+1)} (t)dt\]
 \end{theo}
 
-\begin{theo} Changement de variable \\
-	$f:[a,b] \rightarrow \mathbb{R}$ continue. $\varphi:[\alpha, \beta]$ de classe $C^1$. Alors:
-	\[\int_\alpha^\beta \varphi '(t) f(\varphi(t)) dt = \int_{\varphi(\alpha)}^{\varphi(\beta)} f(u)du\]
+\begin{theo} Int\'egration par parties \\
+	Soient $f,g: [a,b] \rightarrow \mathbb{R}$ de classe $C^1$. Alors
+	\[\int_a^b f'g = [f(t)g(t)]_a^b - \int_a^b fg'\]
 \end{theo}
+
+\begin{theo} Changement de variable
+	\begin{enumerate}
+		\item $f:[a,b] \rightarrow \mathbb{R}$ continue, $\varphi:[\alpha, \beta] \rightarrow [\varphi(\alpha), \varphi(\beta)]$ de classe $C^1$:
+			\[\int_\alpha^\beta \varphi '(t) f(\varphi(t)) dt = \int_{\varphi(\alpha)}^{\varphi(\beta)} f(u)du\]
+		\item $\psi:[\alpha, \beta] \rightarrow [\psi(\alpha), \psi(\beta)]$ une bijection ($\psi ' \neq 0$) de de classe $C^1$:
+			\[\int_\alpha^\beta f(\psi(t)) dt = \int_{\psi(\alpha)}^{\psi(\beta)} f(u)\frac{du}{\psi' \circ \psi^{-1} (u)}\]
+	\end{enumerate}
+\end{theo}
+
+\begin{prop} Formule de Stirling
+	\[n! \sim (\frac{n}{e})^n \sqrt{2\pi n}\]
+\end{prop}
 
 \subsection{Sommes de Darboux-Riemann}
 \begin{defi}
