--- a/Logarithme et exponentielle.tex
+++ b/Logarithme et exponentielle.tex
@@ -19,18 +19,18 @@
 $\ln$ est l'application d\'efinie telle que: $\mathbb{R}^*_+ \rightarrow \mathbb{R}$
 \begin{prop} $x,y > 0$
 	\begin{itemize}
-		\item $\ln (xy) = \ln x + \ln y$
-		\item $\ln 1 = 0$
-		\item $\ln x = -\ln \frac{1}{x}$
-		\item $\ln x^n = n\ln x$
+		\item [-] $\ln (xy) = \ln x + \ln y$
+		\item [-] $\ln 1 = 0$
+		\item [-] $\ln x = -\ln \frac{1}{x}$
+		\item [-] $\ln x^n = n\ln x$
 	\end{itemize}
 \end{prop}
 \begin{prop} Limites
 	\begin{itemize}
-		\item $\lim_{x\to 1} \frac{\ln x}{x-1} = 1$
-		\item $\lim_{x\to 0} \frac{\ln (x+1)}{x} = 1$
-		\item $\lim_{x\to\infty} \frac{\ln x}{x} = 0$
-		\item $\lim_{x\to 0^+} x\ln x = 0$
+		\item [-] $\lim_{x\to 1} \frac{\ln x}{x-1} = 1$
+		\item [-] $\lim_{x\to 0} \frac{\ln (x+1)}{x} = 1$
+		\item [-] $\lim_{x\to\infty} \frac{\ln x}{x} = 0$
+		\item [-] $\lim_{x\to 0^+} x\ln x = 0$
 	\end{itemize}
 \end{prop}
 
@@ -38,16 +38,16 @@ $\ln$ est l'application d\'efinie telle que: $\mathbb{R}^*_+ \rightarrow \mathbb
 $\exp$ est l'application r\'eciproque de $\ln$ d\'efinie telle que: $\mathbb{R} \rightarrow \mathbb{R}^*_+$
 \begin{prop} $ $
 	\begin{itemize}
-		\item $e^{x+y} = e^xe^y$
-		\item $e^0 = 1$
-		\item $e^{-x} = \frac{1}{e^x}$
+		\item [-] $e^{x+y} = e^xe^y$
+		\item [-] $e^0 = 1$
+		\item [-] $e^{-x} = \frac{1}{e^x}$
 	\end{itemize}
 \end{prop}
 \begin{prop} Limites
 	\begin{itemize}
-		\item $\lim_{x\to 0} \frac{e^x-1}{x} = 1$
-		\item $\lim_{x\to\infty} \frac{x}{e^x} = 0$
-		\item $\lim_{x\to-\infty} xe^x = 0$
+		\item [-] $\lim_{x\to 0} \frac{e^x-1}{x} = 1$
+		\item [-] $\lim_{x\to\infty} \frac{x}{e^x} = 0$
+		\item [-] $\lim_{x\to-\infty} xe^x = 0$
 	\end{itemize}
 \end{prop}
 
